--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "chris-portfolio",
+  "name": "stubenrauchc.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://stubenrauchc.github.io/stubenrauchc",
+  "homepage": "http://stubenrauchc.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -38,7 +38,6 @@
       "last 1 safari version"
     ]
   },
-  
   "devDependencies": {
     "gh-pages": "^4.0.0"
   }
