--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stubenrauchc.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://stubenrauchc.github.io/",
+  "homepage": "http://stubenrauchc.github.io/stubenrauchc/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
