--- a/chris-portfolio/package.json
+++ b/chris-portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chris-portfolio",
-  "homepage": "http://stubenrauchc.github.io/chris-portfolio/",
+  "homepage": "http://stubenrauchc.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
