--- a/chris-portfolio/package.json
+++ b/chris-portfolio/package.json
@@ -8,12 +8,24 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-social": "^5.1.1",
+    "firebase": "^9.14.0",
+    "font-awesome": "^4.7.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-animation-components": "^3.0.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
+    "react-redux-form": "^1.16.14",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.5",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
