--- a/chris-portfolio/package.json
+++ b/chris-portfolio/package.json
@@ -4,14 +4,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "fs": "^0.0.1-security",
     "gh-pages": "^4.0.0",
+    "path": "^0.12.7",
+    "pdfjs-dist": "^3.3.122",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-fs": "^0.0.0",
+    "react-pdf": "^6.2.2",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
